<resources>
    <string name="about">使用说明</string>
    <string name="actions">程序流程</string>
    <string name="add">添加</string>
    <string name="add_action">添加程序步骤</string>
    <string name="add_ban">请补充完整</string>
    <string name="antibody_holding_temperature">抗体保温温度（℃）</string>
    <string name="antibody_one_tank">一抗槽</string>
    <string name="antibody_one_tank_move">TO 一抗</string>
    <string name="antibody_two_tank">二抗槽</string>
    <string name="antibody_two_tank_move">TO 二抗</string>
    <string name="app_name">LIQUID</string>
    <string name="aspirate">吸液</string>
    <string name="bar">导航栏</string>
    <string name="blocking_liquid_tank">封闭液</string>
    <string name="blocking_liquid_tank_move">TO 封闭液</string>
    <string name="calibration_setting">校准设置</string>
    <string name="cancel">返回</string>
    <string name="check_update">检查更新</string>
    <string name="close">关闭</string>
    <string name="confirm">确定</string>
    <string name="current_version">当前软件版本</string>
    <string name="defrost">抗体除霜</string>
    <string name="drain_distance">多转的圈数</string>
    <string name="drainage">排液</string>
    <string name="height">高度</string>
    <string name="hint_acceleration">加速（10–100）</string>
    <string name="hint_count">请输入执行次数</string>
    <string name="hint_deceleration">减速（10–100）</string>
    <string name="hint_liquid_volume">请输入加液量（毫升）</string>
    <string name="hint_order">请输入执行序号</string>
    <string name="hint_speed">转速（r/min）</string>
    <string name="hint_temperature">请输入温度（℃）</string>
    <string name="hint_time_hour">请输入时长（小时）</string>
    <string name="hint_time_min">请输入时长（分钟）</string>
    <string name="hint_wait_time">等待时间（ms）</string>
    <string name="insulating">抗体保温</string>
    <string name="mode">模式</string>
    <string name="module">模块</string>
    <string name="motor_distance">移动距离/转</string>
    <string name="motor_setting">电机设置</string>
    <string name="needle_down">针头 DOWN</string>
    <string name="needle_up">针头 UP</string>
    <string name="no_log">没有日志</string>
    <string name="no_program">没有程序</string>
    <string name="order">序号</string>
    <string name="parameter_adjustment">参数调整</string>
    <string name="pause">暂停摇床</string>
    <string name="position">位置</string>
    <string name="program_add">添加程序</string>
    <string name="program_edit">编辑程序</string>
    <string name="program_name">程序名</string>
    <string name="pump_distance">泵吸液量/转</string>
    <string name="pump_five">泵五</string>
    <string name="pump_four">泵四</string>
    <string name="pump_one">泵一</string>
    <string name="pump_three">泵三</string>
    <string name="pump_two">泵二</string>
    <string name="qrcode">微信扫码关注公众号</string>
    <string name="recycle">回收</string>
    <string name="reset">复   位</string>
    <string name="rest">下位机复位</string>
    <string name="save_config">保存配置</string>
    <string name="setting">参数调整</string>
    <string name="start">开 始</string>
    <string name="status">状态</string>
    <string name="stop">停 止</string>
    <string name="subdivision">细分</string>
    <string name="switch_function">功能选择</string>
    <string name="test">测试</string>
    <string name="title_adjust">管理员</string>
    <string name="title_admin">管理员</string>
    <string name="title_calibration">校准管理</string>
    <string name="title_dashboard">流程监控</string>
    <string name="title_home">主界面</string>
    <string name="title_log">日志</string>
    <string name="title_program">分液程序</string>
    <string name="title_program_edit">程序编辑页面</string>
    <string name="to_web">产品网站</string>
    <string name="update">升级</string>
    <string name="wash_tank">洗涤液</string>
    <string name="wash_tank_move">TO 洗涤液</string>
    <string name="waste_tank">废液槽</string>
    <string name="waste_tank_move">TO 废液槽</string>
    <string name="wifi_setting">WIFI设置</string>
    <string name="y_motor">Y轴</string>
    <string name="z_motor">Z轴</string>
    <string name="zero_move">TO 原点</string>
    <string name="notice">注意事项</string>
    <string name="notice_content">1. 运动机构运行时请不要打开抽屉，以免损坏针头。\n2. 执行程序前请确认有充足的洗涤液。\n3. 程序结束后请及时清理容器，避免滋生微生物等问题。\n4. 请阅读说明书后使用，避免误操作。</string>
    <string name="title_container">容器管理</string>
    <string name="sample_zone">样品区</string>
    <string name="wash_zone">洗涤区</string>
    <string name="elution_zone">洗脱区</string>
    <string name="row">行</string>
    <string name="column">列</string>
    <string name="size">规格:</string>
    <string name="move">移动</string>
    <string name="save">保存</string>
    <string name="input_x">X轴坐标</string>
    <string name="input_y">Y轴坐标</string>
    <string name="calibration_name">校准程序名</string>
    <string name="checked">选中</string>
    <string name="button">Button</string>
    <string name="text">Text</string>
    <string name="title_calibration_data">校准数据</string>
    <string name="pump_name">泵名</string>
    <string name="operate">操作</string>
    <string name="before_volume">预计加液体积/μL</string>
    <string name="actual_volume">实际加液体积/μL</string>
    <string name="add_liquid">加液</string>
    <string name="work_name">加液程序名</string>
    <string name="work_edit">加液程序编辑</string>
    <string name="work_plate">加液板编辑</string>
    <string name="work_hole">孔位编辑</string>
    <string name="select_all">全选</string>
    <string name="volume_input">加液量编辑</string>
    <string name="input_v1">泵一加液量 μL</string>
    <string name="input_v2">泵二加液量 μL</string>
    <string name="input_v3">泵三加液量 μL</string>
    <string name="input_v4">泵四加液量 μL</string>
    <string name="plate_one">一号板</string>
    <string name="plate_two">二号板</string>
    <string name="plate_three">三号板</string>
    <string name="plate_four">四号板</string>
    <string name="device">设备信息</string>
</resources>