<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/light_onPrimary"
        android:orientation="vertical"
        tools:context=".ui.home.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="#F4F4F4"
                android:orientation="vertical"
                tools:ignore="VisualLintBounds">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/select"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/light_onPrimary"
                        android:ellipsize="end"
                        android:gravity="center"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:singleLine="true"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:cornerRadius="0dp"
                        app:icon="@mipmap/program"
                        app:iconPadding="0dp"
                        app:iconSize="32dp"
                        app:rippleColor="@color/purple_700"
                        app:strokeColor="@color/light_primary"
                        app:strokeWidth="2dp"
                        tools:ignore="NestedWeights,SpeakableTextPresentCheck" />

                    <TextView
                        android:id="@+id/hole_number"
                        android:layout_width="128dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    tools:ignore="TextSizeCheck">

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:text="00:00:00"
                        android:textColor="@color/black"
                        android:textSize="80sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="HardcodedText" />

                    <ProgressBar
                        android:id="@+id/progress"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="16dp"
                        android:max="100"
                        android:progressDrawable="@drawable/bg_progress"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/action"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/reset"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="NestedWeights,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@mipmap/reset"
                        tools:ignore="ContentDescription,VisualLintBounds,ImageContrastCheck" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reset"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/more"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="NestedWeights,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@mipmap/more"
                        tools:ignore="ContentDescription,VisualLintBounds" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/dark_onPrimaryContainer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.zktony.core.widget.DynamicPlate
                android:id="@+id/dynamic_plate"
                android:layout_width="360dp"
                android:layout_height="240dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/start"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/start"
                    android:textAllCaps="false"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:cornerRadius="0dp"
                    app:icon="@mipmap/play"
                    app:iconGravity="textStart"
                    app:iconSize="36dp"
                    app:rippleColor="@color/purple_700"
                    tools:ignore="NestedWeights,VisualLintButtonSize" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pause"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="#FBF12D"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/pause"
                    android:textAllCaps="false"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:cornerRadius="0dp"
                    app:icon="@mipmap/pause"
                    app:iconGravity="textStart"
                    app:iconSize="36dp"
                    app:rippleColor="@color/purple_700"
                    tools:ignore="TextContrastCheck,VisualLintButtonSize" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/stop"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/light_error"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:text="@string/stop"
                    android:textAllCaps="false"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:cornerRadius="0dp"
                    app:icon="@mipmap/close"
                    app:iconGravity="textStart"
                    app:iconSize="36dp"
                    app:rippleColor="@color/purple_700"
                    tools:ignore="VisualLintButtonSize" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>

